# VectorBT

./: .gitignore  CLAUDE.md  README.md  app.sh  pyproject.toml
docs/strategies/: supertrend.md
docs/superpowers/plans/: 2026-03-19-backtest-best-practices.md
docs/superpowers/specs/: 2026-03-19-backtest-best-practices-design.md
src/dashboard/: app.py
src/dashboard/pages/: backtest.py  compare.py  monte_carlo.py  optimize.py  regime.py  results.py  trade_deep.py  walk_forward.py
src/data/: loader.py
src/engine/: kelly.py  metrics.py  monte_carlo.py  optimizer.py  position_management.py  regime.py  robustness.py  runner.py  sim_result.py  simulator.py  trade_analysis.py  walk_forward.py
src/storage/: db.py  models.py
src/strategies/: base.py  bollinger_breakout.py  ma_crossover.py  registry.py  rsi_reversal.py  supertrend.py
tests/: test_simulator.py  test_supertrend.py
